--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "twig/twig": "^3.0",
-        "ext-pdo": "*"
+        "ext-pdo": "*",
+        "pecee/simple-router": "5.4.1.7"
     }
 }
